--- a/SandBox/AndroidManifest.xml
+++ b/SandBox/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
+        android:name="ar.uba.fi.sandbox.SandboxApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -25,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="AdvancedFormActivity"></activity>
         <activity android:name="SimpleFormActivity"></activity>
         <activity android:name="SearchActivity"></activity>
     </application>
