--- a/SandBox/.classpath
+++ b/SandBox/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/urlimageviewhelper.jar"/>
-	<classpathentry kind="lib" path="libs/android-async-http-1.4.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-async-http-1.4.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
