--- a/SandBox/AndroidManifest.xml
+++ b/SandBox/AndroidManifest.xml
@@ -19,14 +19,14 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="AdvancedFormActivity"></activity>
+        <activity android:name="AdvancedFormActivity" android:theme="@style/AppTheme"></activity>
         <activity android:name="SimpleFormActivity"></activity>
         <activity android:name="SearchActivity"></activity>
         <activity android:name="SwipeRefreshActivity"></activity>
