--- a/SandBox/bin/AndroidManifest.xml
+++ b/SandBox/bin/AndroidManifest.xml
@@ -5,8 +5,8 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="17"
-        android:targetSdkVersion="17" />
+        android:minSdkVersion="15"
+        android:targetSdkVersion="20" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -19,16 +19,18 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="ar.uba.fi.mileem.MainActivity"
-            android:label="@string/app_name" android:theme="@style/AppTheme">
+            android:label="@string/app_name" 
+             android:configChanges="orientation|keyboardHidden|screenSize"
+             android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="AdvancedFormActivity" android:theme="@style/AppTheme"></activity>
-        <activity android:name="SimpleFormActivity"></activity>
-        <activity android:name="SearchActivity"></activity>
+          <activity android:name="AdvancedFormActivity" android:theme="@style/AppTheme" android:configChanges="orientation|keyboardHidden|screenSize"></activity>
+        <activity android:name="SimpleFormActivity" android:configChanges="orientation|keyboardHidden|screenSize"></activity>
+        <activity android:name="SearchActivity" android:configChanges="orientation|keyboardHidden|screenSize"></activity>
         <activity android:name="SwipeRefreshActivity"></activity>
     </application>
 
